Datenschutz in die Website integriert

--- a/Produkt.html
+++ b/Produkt.html
@@ -419,6 +419,7 @@
             <p><a href="Produkt.html">Produkte</a><br></p>
             <p><a href="Kontakt.html">Kontakt</a><br></p>
             <p><a href="Über uns.html">Über uns</a><br></p>
+            <p><a href="datenschutz.html">Datenschutz</a></p>
           </div>
           <div class="column-footer-middle">
             <p> <b>Kontakt</b> </p>
