--- a/Über uns.html
+++ b/Über uns.html
@@ -43,24 +43,29 @@
         }
       </script>
       <!--Ende Script Navigationsleiste-->
-
     </header>
     <!--Abschluss des Headerbereichs und der Navigationsleiste-->
-
-
     <main>
       <!--Hier beginnt der Mainteil der Website-->
-
       <div id="main">
         <h1>Das ist eine leere Seite, die mit Leben gefüllt werden will</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
           aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <div class="aboutus">
+          <p> <b>So fing alles an:</b> </p>
+          <p>Wir sind ein junges Team rund um Gründer und lieben das Radfahren. Durch das Radfahren haben wir uns auch kennengelernt.</p>
+          <p>Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach Elektrofahrrädern umgesehen. Da wir aber schnell gemerkt haben, dass ein Elektrofahrrad in der Anschaffung sehr teuer ist und wir selbst alle Fahrräder im
+            Besitz hatten, die im sehr guten Zustand waren, wurde die Idee geboren. Wir wollten unsere Fahrräder mit einem Elektroantrieb ausstatten. Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder
+            umzurüsten, haben wir kurzerhand selbst entschlossen solch einen Antrieb zu entwickeln. Durch die hohe Exptertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der
+            Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand, haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere
+            Unterstützung konnten wir unser Produkt weiter verbessern und nun sehen Sie das fertige und erprobte Produkt.
+            erprobte Produkt, welches wir Ihnen voller Stolz anbieten können.</p>
+          <p>Aber nun genug der Worte, damit Sie ein Bild zu uns haben, werden wir uns kurz Ihnen vorstellen.</p>
+        </div>
       </div>
-
-
     </main>
     <!--Hier endet der Main Bereich-->
-
     <footer>
       <!--Hier beginnt der Footer Bereich-->
       <div class="footer">
@@ -71,6 +76,7 @@
             <p><a href="Produkt.html">Produkte</a><br></p>
             <p><a href="Kontakt.html">Kontakt</a><br></p>
             <p><a href="Über uns.html">Über uns</a><br></p>
+            <p><a href="datenschutz.html">Datenschutz</a></p>
           </div>
           <div class="column-footer-middle">
             <p> <b>Kontakt</b> </p>
