Direkteinsprung Standard/Premium Produkt

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -22,8 +22,8 @@
           <div class="dropdown">
             <button class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
             <div class="dropdown-content">
-              <a href="Produkt.html">Basic</a>
-              <a href="Produkt.html">Luxus</a>
+              <a href="Produkt.html#standard_variante">Standard</a>
+              <a href="Produkt.html#premium_variante">Premium</a>
             </div>
           </div>
           <a href="Kontakt.html" class="active">Kontakt</a>
