--- a/Produkt.html
+++ b/Produkt.html
@@ -22,8 +22,8 @@
           <div class="dropdown">
             <button class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
             <div class="dropdown-content">
-              <a href="Produkt.html">Basic</a>
-              <a href="Produkt.html">Luxus</a>
+              <a href="Produkt.html#standard_variante">Standard</a>
+              <a href="Produkt.html#premium_variante">Premium</a>
             </div>
           </div>
           <a href="Kontakt.html">Kontakt</a>
@@ -62,7 +62,7 @@
         </div>
 
         <!-- der grüne Block mit Standard -->
-        <h1 class="separator">Standard Variante</h1>
+        <h1 class="separator" id="standard_variante">Standard Variante</h1>
 
     <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 
@@ -147,7 +147,7 @@
 
 		<!-- hier endet Bikestail  -->
 		<!-- der grüne Block mit Premium-->
-		<h1 class="separator">Premium Variante</h1>
+		<h1 class="separator" id="premium_variante">Premium Variante</h1>
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
 		<div class="container-1-Produktdaten">
 			<div class="row">
