--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <div class="dropdown">
             <button class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
             <div class="dropdown-content">
-              <a href="Produkt.html">Standard</a>
-              <a href="Produkt.html">Premium</a>
+              <a href="Produkt.html#standard_variante">Standard</a>
+              <a href="Produkt.html#premium_variante">Premium</a>
             </div>
           </div>
           <a href="Kontakt.html">Kontakt</a>
@@ -129,7 +129,7 @@
 
 
           <div class="gotoproductbutton">
-            <button onclick="location.href='https://www.google.de'" type="button" name="button">
+            <button onclick="location.href='Produkt.html'" type="button" name="button">
               <p>Zu unseren Produkten</p>
             </button>
             <!-- der onclick Befehl ist ein JavaScript Befehl-->
