Montagevideo Bikestail eingebettet, img in css nach oben gepackt

--- a/Produkt.html
+++ b/Produkt.html
@@ -145,11 +145,27 @@
         </div>
       </div>
 
+      <!-- 1 column Produktinfos Montagevideo -->
+      <div class="container-2">
+      	<div class="row">
+      		<div class="column-center">
+      			<h1> Einfache Montage </h1>
+      				<iframe width="560" height="315" src="https://www.youtube.com/embed/w0DfelncDHI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      				</iframe>
+
+      		</div>
+
+      	</div>
+      </div>
+    </div>  <!-- schließender div Block für Wrapper der Container  -->
+
 		<!-- hier endet Bikestail  -->
 		<!-- der grüne Block mit Premium-->
-		<h1 class="separator" id="premium_variante">Premium Variante</h1>
+		<h1 class="separator" id="premium_variante">Premium Variante 1</h1>
+
+    <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
-		<div class="container-1-Produktdaten">
+		<div class="container-1-produktdaten">
 			<div class="row">
 				<div class="column-50">
 					<h2> Neue eDrive150start ! </h2>
@@ -274,10 +290,11 @@
 				</table>
 			</div>
 		</div>
-
+  </div> <!-- schließender div Block für Wrapper der Container  -->
 		<!-- der grüne Block mit Premium-->
-		<h2 class="separator m-t-35">Premium Variante</h2>
+		<h2 class="separator m-t-35">Premium Variante 2</h2>
 
+  <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
 		<div class="container-1-Produktdaten">
 			<div class="row">
@@ -404,7 +421,10 @@
 				</table>
 			</div>
 		</div>
-    </div> <!-- Das ist das schließende div von main id  -->
+    </div>
+
+    </div> <!-- schließender div Block für Wrapper der Container  -->
+  </div> <!-- Das ist das schließende div von main id  -->
 
     </main>
     <!--Hier endet der Main Bereich-->
