Über uns gestaltet, zur Diskussion

--- a/Über uns.html
+++ b/Über uns.html
@@ -53,14 +53,53 @@
           <h1>So fing alles an:</h1>
           <p>Wir sind ein junges Team rund um Gründer und lieben das Radfahren. Durch das Radfahren haben wir uns auch kennengelernt.</p>
 
-          <p>Vor nahezu zehn Jahren haben wir uns kennengelernt und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren ahben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
+          <p>Vor nahezu zehn Jahren haben wir uns kennengelernt und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
             Elektrofahrrädern umgesehen. Da wir aber schnell gemerkt haben, dass ein Elektrofahrrad in der Anschaffung sehr teuer ist und wir selbst alle Fahrräder im Besitz hatten, die im sehr guten Zustand waren, wurde die Idee geboren. Wir wollten
             unsere Fahrräder mit einem Elektroantrieb ausstatten. Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, haben wir kurzerhand selbst entschlossen solch einen Antrieb zu entwickeln. </p>
+
+          <p>Um mit den Protoypen zu beginnen, haben wir unsere erste Produktionsstätte 2011 in Daniels Garage eröffnet.</p>
+          <h2>Bild einer Garage</h2>
 
           <p> Durch die hohe Exptertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
             haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unser Produkt weiter verbessern und nun sehen Sie das fertige und
             erprobte Produkt, welches wir Ihnen voller Stolz anbieten können.</p>
+
           <p>Aber nun genug der Worte, damit Sie ein Bild zu uns haben, werden wir uns kurz Ihnen vorstellen.</p>
+
+          <h1>Das Team:</h1>
+
+          <h2>Management</h2>
+          <hr>
+          <h3>Dominik Almus.</h3>
+          <p>Dominik ist nach der Höhle der Löwen zu uns gestoßen. Er hat unsere Idee im Fernsehen gesehen und war direkt begeistert. Er hat sich bei uns gemeldet und wir haben sofort gemerkt, dass wir alle an einem Strang ziehen. Durch die bereits
+            vorhanden Kenntnisse in der Führung von Unternehmen, hat Dominik die Geschäftsführung übernommen.</p>
+
+          <h2>Human Ressources</h2>
+          <hr>
+          <h3>Luca Zimmermann.</h3>
+          <p>Luca ist in unserem Unternehmen für die Mitarbeiter zuständig. Wir haben uns auf die Fahnen geschrieben, dass alle Produkte, die wir erwerben und bei uns weiterverarbeitet werden unter fairen Bedingungen verarbeitet werden. Natürlich
+            sollen diese fairen Arbeitsbediungen auch für unsere Mitarbeiter gelten. </p>
+
+          <h2>International Relationsship Management</h2>
+          <hr>
+          <h3>Alvaro Requesens.</h3>
+          <p>Alvaro ist seit Anfang an dabei und unser Mann, wenn es um die internationalen Beziehungen geht. Wir produzieren in vielen Ländern auf der Welt. Durch die Tatsache, dass er vier Sprachen fließend spricht und den Blick für das Wesentliche
+            hat ist er unser Mann,
+            wenn es um die Kommunikation mit Geschäftspartnern weltweit geht. Durch die weiten Händlernetzen und die Produktionsstätten auf der ganzen Welt telefoniert Alvaro nahezu den ganzen Tag rund um den Globus.</p>
+          <p></p>
+
+          <h2>Compliance</h2>
+          <hr>
+          <h3>Daniel Werner.</h3>
+          <p>Daniel ist seit Anfang an dabei und hat Biketails von der Pique auf mitentwickelt. Durch seinen geschulten Blick für alles rund um Compliancethemen nimmt er seit Anfang an diese Funktion ein. Verhandlungen, mit unseren Vertragspartnern
+            und Prüfung der Verträge stehen bei ihm auf der Tagesordnung.</p>
+
+          <h2>Customer Relationsship Management</h2>
+          <hr>
+          <h3>Maximilian Rampp</h3>
+          <p>Maximilian ist auch einer der Gründungsmitglieder. Durch den frühen Einstieg in die Firma konnte er bereits einiges an Erfahrung sammeln. Von Anfang an war es Maximilians Aufgabe die Kunden über deren Zurfriedenheit zu befragen und somit
+            auch weitere Verbesserungen an unserem Produkt vorzunehmen.</p>
+
         </div>
       </div>
     </main>
