--- a/Produkt.html
+++ b/Produkt.html
@@ -188,15 +188,15 @@
 							</ul>
 							<div class="label">
 								<p class="p-b-0">
-									Quantity:
+									Menge:
 									<input type="number" class="quantity" value="1"/>
 								</p>
 								<p class="p-t-0">
-									Color:
+									Farbe:
 									<select class="color">
-										<option>Silver</option>
-										<option>Black</option>
-										<option>Red</option>
+										<option>Schwarz</option>
+										<option>Weiß</option>
+										<option>Grau</option>
 									</select>
 								</p>
 							</div>
@@ -319,15 +319,15 @@
 							</ul>
 							<div class="label">
 								<p class="p-b-0">
-									Quantity:
+									Menge:
 									<input type="number" class="quantity" value="1"/>
 								</p>
 								<p class="p-t-0">
-									Color:
+									Farbe:
 									<select class="color">
-										<option>Silver</option>
-										<option>Black</option>
-										<option>Red</option>
+										<option>Schwarz</option>
+										<option>weiß</option>
+										<option>Grau</option>
 									</select>
 								</p>
 							</div>
@@ -354,7 +354,7 @@
 					<p> Der getriebelose Mittelmotor wird anstelle der linken Kurbel montiert. Durch seine Konstruktion und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist absolut geräuschlos. Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 32 Nm, unterstützt er Deine Tretleistung bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder). Höhere Geschwindigkeiten können durch den Einsatz reiner Muskelkraft erreicht werden. Da der Motor kein Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du auch noch Dein Fahrrad wie bisher nutzen kannst.</p>
 				</div>
 				<div class="column-50">
-					<img src="video 1.gif" alt="Weltsymbol" width="500" height="700" class="m-t-35">
+					<img src="video 3.gif" alt="Weltsymbol" width="500" height="700" class="m-t-35">
 				</div>
 			</div>
 		</div>
@@ -366,7 +366,7 @@
 		<div class="container-produktdaten">
 			<div class="row">
 				<div class="column-50">
-					<img src="video 2.gif" alt="Leute im Fahrrad" width="500" height="700" class="m-t-35">
+					<img src="video 5.gif" alt="Leute im Fahrrad" width="500" height="700" class="m-t-35">
 				</div>
 
 				<div class="column-50">
@@ -396,7 +396,7 @@
 				  </tr>
 				  <tr>
 					<td>Kapazität</td>
-					<td>140 Wh</td>
+					<td>2x 497 Wh</td>
 				  </tr>
 				  <tr>
 					<td>Spannung</td>
@@ -404,19 +404,19 @@
 				  </tr>
 				  <tr>
 					<td>Ladezeit</td>
-					<td>1 h 15 min</td>
+					<td>3 h 20 min / 8 h 20 min</td>
 				  </tr>
 				   <tr>
 					<td>Reichweite optimal</td>
-					<td>13 - 28 km</td>
+					<td>124 - 240 km</td>
 				  </tr>
 					 <tr>
 					<td>Zusatzgewicht</td>
-					<td>5,8 kg</td>
+					<td>6,9 kg</td>
 				  </tr>
 					<tr>
 					<td>Maße Akku</td>
-					<td>80 x 190 mm (D x H)</td>
+					<td>80 x 342 mm (D x H)</td>
 				  </tr>
 				</table>
 			</div>
