--- a/Produkt.html
+++ b/Produkt.html
@@ -179,7 +179,7 @@
 					<div class="product-data">
 						<div class="descripcion">
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a laoreet diam. In hac habitasse platea dictumst. Suspendisse sodales odio non mauris viverra, sed imperdiet lorem dignissim. Suspendisse non blandit mi.
+								Der Pendix eDrive150 ist ideal für Dich als Stadtpendler geeignet oder wenn Du nur punktuelle Unterstützung benötigst. Die Pendix ePower150 unterstützt Dich von 13 - 28 km. Bei Deinem Weg ins Büro oder durch die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.
 							</p>
 							<ul>
 								<li>Es bonito</li>
@@ -218,7 +218,7 @@
 		<div class="container-produktdaten">
 			<div class="row">
 				<div class="column-50">
-					<h3>Bla bla bla</h3>
+					<h3>Die neue Motorgeneration</h3>
 					<p> Der eDrive150start ist das ideale Einstiegsprodukt in die Edrive-Produktfamilie. Die ePower150 unterstützt Dich von 13 - 28 km und ist daher ideal für Dich als Stadtpendler geeignet oder wenn Du nur punktuelle Unterstützung benötigst. Bei Deinem Weg ins Büro oder durch die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.  </p>
 					<p> Der getriebelose Mittelmotor wird anstelle der linken Kurbel montiert. Durch seine Konstruktion und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist absolut geräuschlos. Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 32 Nm, unterstützt er Deine Tretleistung bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder). Höhere Geschwindigkeiten können durch den Einsatz reiner Muskelkraft erreicht werden. Da der Motor kein Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du auch noch Dein Fahrrad wie bisher nutzen kannst.</p>
 				</div>
@@ -229,7 +229,7 @@
 		</div>
 
 		<div class="white-gap">
-			<h3 class="text-center">Incredible</h3>
+			<h3 class="text-center">Die neue Motorgeneration für maximalen Fahrspaß</h3>
 		</div>
 
 		<div class="container-produktdaten">
@@ -239,7 +239,7 @@
 				</div>
 
 				<div class="column-50">
-					<h3>Bla bla bla</h3>
+					<h3>Mehr Leistung, mehr Funktion, mehr Fahrspaß</h3>
 					<p>
 						Die 48 V ePower150 (Akku) besitzt eine Kapazität von 140 Wh und arbeitet auf Basis moderner Lithium-Ionen Technologie. Sie kann mit einfachen Handgriffen vom Rad abgenommen werden und ist mit dem mitgelieferten 60 W Ladegerät innerhalb von 1 Stunde und 15 Minuten Stunden wieder vollständig geladen. Während der Fahrt zeigt Dir der Akku durch den farblich wechselnden LED Ring den aktuellen Ladestand an. Der Akku besitzt einen Power Knopf über den dieser angeschaltet werden kann. Anschließend wird zu Deiner eigenen Tretleistung 150 % hinzugesteuert. Durch diese smarte Bauweise benötigst Du kein zusätzliches Display am Lenker. Möchtest Du dennoch aktuelle Daten sichtbar am Lenker haben, so kannst Du mit der Bluetoothfunktion des Akkus diesen mit Deinem Smartphone und der Bikepower App verbinden. Montiert wird die eDrive1000 mit einem Kunststoffhalter direkt am Fahrradrahmen.
 					</p>
@@ -310,7 +310,7 @@
 					<div class="product-data">
 						<div class="descripcion">
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a laoreet diam. In hac habitasse platea dictumst. Suspendisse sodales odio non mauris viverra, sed imperdiet lorem dignissim. Suspendisse non blandit mi.
+								Dank des eDrive1000 Umbausatzes wird aus Deinem Fahrrad ein zuverlässiges und leistungsstarkes eBike. Das System passt an nahezu jeden Rahmentyp, egal ob City-, Trekking-, Lasten- oder Mountainbikes, es muss nur genügend Platz für den Akku und den Motor am Rahmen vorhanden sein.
 							</p>
 							<ul>
 								<li>positive punkte</li>
@@ -349,9 +349,9 @@
 		<div class="container-produktdaten">
 			<div class="row">
 				<div class="column-50">
-					<h3>Bla bla bla</h3>
-					<p> Der eDrive150start ist das ideale Einstiegsprodukt in die Edrive-Produktfamilie. Die ePower150 unterstützt Dich von 13 - 28 km und ist daher ideal für Dich als Stadtpendler geeignet oder wenn Du nur punktuelle Unterstützung benötigst. Bei Deinem Weg ins Büro oder durch die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.  </p>
-					<p> Der getriebelose Mittelmotor wird anstelle der linken Kurbel montiert. Durch seine Konstruktion und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist absolut geräuschlos. Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 32 Nm, unterstützt er Deine Tretleistung bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder). Höhere Geschwindigkeiten können durch den Einsatz reiner Muskelkraft erreicht werden. Da der Motor kein Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du auch noch Dein Fahrrad wie bisher nutzen kannst.</p>
+					<h3>Einer für alle.</h3>
+					<p> Das System unterstützt Riemen- sowie Kettenantrieb. Dieser muss sich auf der rechten Seite des Fahrrads befinden. Zudem ist es notwendig, dass Dein Fahrrad über ein BSA Tretlager verfügt. Der eDrive1000 ist bei Mitnahme des Zusatzakkus ideal für Deine Strecken von 124* km bis zu 240* km Länge. </p>
+					<p> Durch seine Konstruktion und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist absolut geräuschlos. Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 65 Nm, unterstützt er Deine eigene Tretleistung bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder). Höhere Geschwindigkeiten können durch den Einsatz reiner Muskelkraft erreicht werden. Da der Motor kein Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du auch noch Dein Fahrrad wie bisher nutzen kannst. </p>
 				</div>
 				<div class="column-50">
 					<img src="video 3.gif" alt="Weltsymbol" width="500" height="700" class="m-t-35">
@@ -360,7 +360,7 @@
 		</div>
 
 		<div class="white-gap">
-			<h3 class="text-center">Incredible</h3>
+			<h3 class="text-center">Die neue Motorgeneration für maximalen Fahrspaß</h3>
 		</div>
 
 		<div class="container-produktdaten">
@@ -370,9 +370,9 @@
 				</div>
 
 				<div class="column-50">
-					<h3>Bla bla bla</h3>
+					<h3>Natürliches Tretgefühl & geräuschlos</h3>
 					<p>
-						Die 48 V ePower150 (Akku) besitzt eine Kapazität von 140 Wh und arbeitet auf Basis moderner Lithium-Ionen Technologie. Sie kann mit einfachen Handgriffen vom Rad abgenommen werden und ist mit dem mitgelieferten 60 W Ladegerät innerhalb von 1 Stunde und 15 Minuten Stunden wieder vollständig geladen. Während der Fahrt zeigt Dir der Akku durch den farblich wechselnden LED Ring den aktuellen Ladestand an. Der Akku besitzt einen Power Knopf über den dieser angeschaltet werden kann. Anschließend wird zu Deiner eigenen Tretleistung 150 % hinzugesteuert. Durch diese smarte Bauweise benötigst Du kein zusätzliches Display am Lenker. Möchtest Du dennoch aktuelle Daten sichtbar am Lenker haben, so kannst Du mit der Bluetoothfunktion des Akkus diesen mit Deinem Smartphone und der Bikepower App verbinden. Montiert wird die eDrive1000 mit einem Kunststoffhalter direkt am Fahrradrahmen.
+						Der Akku kann mit einfachen Handgriffen vom Rad abgenommen werden und ist mit dem mitgelieferten 200 W Ladegerät bereits innerhalb von 3 Stunden 20 Minuten wieder vollständig geladen. Während der Fahrt zeigt Dir der Akku durch den farblich wechselnden LED Ring den aktuellen Ladestand an. Die Unterstützungsstufen können am Drehrad oberhalb des Akkus gewählt werden. Durch diese smarte Bauweise benötigst Du kein zusätzliches Display am Lenker. Möchtest Du dennoch aktuelle Daten sichtbar am Lenker haben, so kannst Du mit der Bluetoothfunktion des Akkus diesen mit Deinem Smartphone verbinden. Der Akku besitzt eine USB-Schnittstelle für das Laden von externen Geräten, wie beispielsweise Dein Handy. Montiert wird die ePower mit einem Metallhalter direkt am Fahrradrahmen.
 					</p>
 				</div>
 			</div>
