--- a/Produkt.html
+++ b/Produkt.html
@@ -182,9 +182,9 @@
 								Der Pendix eDrive150 ist ideal für Dich als Stadtpendler geeignet oder wenn Du nur punktuelle Unterstützung benötigst. Die Pendix ePower150 unterstützt Dich von 13 - 28 km. Bei Deinem Weg ins Büro oder durch die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.
 							</p>
 							<ul>
-								<li>Es bonito</li>
-								<li>Es bonito</li>
-								<li>Es bonito</li>
+								<li>Einfache Bedienung</li>
+								<li>Drei Unterstützungsstufen</li>
+								<li>LED Ring zur Anzeige des aktuellen Ladezustandes</li>
 							</ul>
 							<div class="label">
 								<p class="p-b-0">
@@ -313,9 +313,9 @@
 								Dank des eDrive1000 Umbausatzes wird aus Deinem Fahrrad ein zuverlässiges und leistungsstarkes eBike. Das System passt an nahezu jeden Rahmentyp, egal ob City-, Trekking-, Lasten- oder Mountainbikes, es muss nur genügend Platz für den Akku und den Motor am Rahmen vorhanden sein.
 							</p>
 							<ul>
-								<li>positive punkte</li>
-								<li>positive punkte</li>
-								<li>positive punkte</li>
+								<li>Einfache Bedienung</li>
+								<li>Drei Unterstützungsstufen</li>
+								<li>LED Ring zur Anzeige des aktuellen Ladezustandes</li>
 							</ul>
 							<div class="label">
 								<p class="p-b-0">
