--- a/Produkt.html
+++ b/Produkt.html
@@ -179,7 +179,7 @@
 					<div class="product-data">
 						<div class="descripcion">
 							<p>
-								Der eDrive150 ist ideal für Dich als Stadtpendler geeignet oder wenn Du nur punktuelle Unterstützung benötigst. Die Pendix ePower150 unterstützt Dich von 13 - 28 km. Bei Deinem Weg ins Büro oder durch die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.
+								Der eDrive150 ist ideal für Dich als Stadtpendler geeignet oder wenn Du nur punktuelle Unterstützung benötigst. Die ePower150 unterstützt Dich von 13 - 28 km. Bei Deinem Weg ins Büro oder durch die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.
 							</p>
 							<ul>
 								<li>Einfache Bedienung</li>
