Über uns Seite weiter ausgebaut

--- a/Über uns.html
+++ b/Über uns.html
@@ -58,7 +58,10 @@
             unsere Fahrräder mit einem Elektroantrieb ausstatten. Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, haben wir kurzerhand selbst entschlossen solch einen Antrieb zu entwickeln. </p>
 
           <p>Um mit den Protoypen zu beginnen, haben wir unsere erste Produktionsstätte 2011 in Daniels Garage eröffnet.</p>
-          <h2>Bild einer Garage</h2>
+          <div class="garage_ueberuns">
+            <img src="garage_ueberuns.jpg" alt="In dieser Garage hat alles begonnen.">
+          </div>
+
 
           <p> Durch die hohe Exptertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
             haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unser Produkt weiter verbessern und nun sehen Sie das fertige und
@@ -68,37 +71,83 @@
 
           <h1>Das Team:</h1>
 
-          <h2>Management</h2>
-          <hr>
-          <h3>Dominik Almus.</h3>
-          <p>Dominik ist nach der Höhle der Löwen zu uns gestoßen. Er hat unsere Idee im Fernsehen gesehen und war direkt begeistert. Er hat sich bei uns gemeldet und wir haben sofort gemerkt, dass wir alle an einem Strang ziehen. Durch die bereits
-            vorhanden Kenntnisse in der Führung von Unternehmen, hat Dominik die Geschäftsführung übernommen.</p>
+          <div class="employee">
+            <h2>Management</h2>
+            <hr>
+            <h3>Dominik Almus.</h3>
+            <div class="employee-detail">
+              <div class="employee-picture">
+                <img src="Dominik_Almus.jpg" alt="Hier sollte eigentlich Dominik sein">
+              </div>
+              <div class="employee-text">
+                <p>Dominik ist nach der Höhle der Löwen zu uns gestoßen. Er hat unsere Idee im Fernsehen gesehen und war direkt begeistert. Er hat sich bei uns gemeldet und wir haben sofort gemerkt, dass wir alle an einem Strang ziehen. Durch die
+                  bereits vorhanden Kenntnisse in der Führung von Unternehmen, hat Dominik die Geschäftsführung übernommen.</p>
+              </div>
+            </div>
+          </div>
 
-          <h2>Human Ressources</h2>
-          <hr>
-          <h3>Luca Zimmermann.</h3>
-          <p>Luca ist in unserem Unternehmen für die Mitarbeiter zuständig. Wir haben uns auf die Fahnen geschrieben, dass alle Produkte, die wir erwerben und bei uns weiterverarbeitet werden unter fairen Bedingungen verarbeitet werden. Natürlich
-            sollen diese fairen Arbeitsbediungen auch für unsere Mitarbeiter gelten. </p>
+          <div class="employee">
+            <h2>Human Ressources</h2>
+            <hr>
+            <h3>Luca Zimmermann.</h3>
+            <div class="employee-detail">
+              <div class="employee-picture">
+                <img src="Luca_Zimmermann.jpg" alt="Hier sollte eigentlich Luca sein">
+              </div>
+              <div class="employee-text">
+                <p>Luca ist in unserem Unternehmen für die Mitarbeiter zuständig. Wir haben uns auf die Fahnen geschrieben, dass alle Produkte, die wir erwerben und bei uns weiterverarbeitet werden unter fairen Bedingungen verarbeitet werden.
+                  Natürlich sollen diese fairen Arbeitsbediungen auch für unsere Mitarbeiter gelten. </p>
+              </div>
+            </div>
+          </div>
 
-          <h2>International Relationsship Management</h2>
-          <hr>
-          <h3>Alvaro Requesens.</h3>
-          <p>Alvaro ist seit Anfang an dabei und unser Mann, wenn es um die internationalen Beziehungen geht. Wir produzieren in vielen Ländern auf der Welt. Durch die Tatsache, dass er vier Sprachen fließend spricht und den Blick für das Wesentliche
-            hat ist er unser Mann,
-            wenn es um die Kommunikation mit Geschäftspartnern weltweit geht. Durch die weiten Händlernetzen und die Produktionsstätten auf der ganzen Welt telefoniert Alvaro nahezu den ganzen Tag rund um den Globus.</p>
-          <p></p>
+          <div class="employee">
+            <h2>International Relationsship Management</h2>
+            <hr>
+            <h3>Alvaro Requesens.</h3>
+            <div class="employee-detail">
+              <div class="employee-picture">
+                <img src="Alvaro_Requesens.jpg" alt="Hier sollte eigentlich Alvaro sein">
+              </div>
+              <div class="employee-text">
+                <p>Alvaro ist seit Anfang an dabei und unser Mann, wenn es um die internationalen Beziehungen geht. Wir produzieren in vielen Ländern auf der Welt. Durch die Tatsache, dass er vier Sprachen fließend spricht und den Blick für das
+                  Wesentliche hat ist er unser Mann, wenn es um die Kommunikation mit Geschäftspartnern weltweit geht. Durch die weiten Händlernetzen und die Produktionsstätten auf der ganzen Welt telefoniert Alvaro nahezu den ganzen Tag rund um den
+                  Globus.</p>
+              </div>
+            </div>
+          </div>
 
-          <h2>Compliance</h2>
-          <hr>
-          <h3>Daniel Werner.</h3>
-          <p>Daniel ist seit Anfang an dabei und hat Biketails von der Pique auf mitentwickelt. Durch seinen geschulten Blick für alles rund um Compliancethemen nimmt er seit Anfang an diese Funktion ein. Verhandlungen, mit unseren Vertragspartnern
-            und Prüfung der Verträge stehen bei ihm auf der Tagesordnung.</p>
 
-          <h2>Customer Relationsship Management</h2>
-          <hr>
-          <h3>Maximilian Rampp</h3>
-          <p>Maximilian ist auch einer der Gründungsmitglieder. Durch den frühen Einstieg in die Firma konnte er bereits einiges an Erfahrung sammeln. Von Anfang an war es Maximilians Aufgabe die Kunden über deren Zurfriedenheit zu befragen und somit
-            auch weitere Verbesserungen an unserem Produkt vorzunehmen.</p>
+          <div class="employee">
+            <h2>Compliance</h2>
+            <hr>
+            <h3>Daniel Werner.</h3>
+            <div class="employee-detail">
+              <div class="employee-picture">
+                <img src="Daniel_Werner.jpg" alt="Hier sollte eigentlich Daniel sein">
+              </div>
+              <div class="employee-text">
+                <p>Daniel ist seit Anfang an dabei und hat Biketails von der Pique auf mitentwickelt. Durch seinen geschulten Blick für alles rund um Compliancethemen nimmt er seit Anfang an diese Funktion ein. Verhandlungen, mit unseren
+                  Vertragspartnern
+                  und Prüfung der Verträge stehen bei ihm auf der Tagesordnung.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="employee">
+            <h2>Customer Relationsship Management</h2>
+            <hr>
+            <h3>Maximilian Rampp.</h3>
+            <div class="employee-detail">
+              <div class="employee-picture">
+                <img src="Maximilian_Rampp.jpg" alt="Hier sollte eigentlich Max sein">
+              </div>
+              <div class="employee-text">
+                <p>Maximilian ist auch einer der Gründungsmitglieder. Durch den frühen Einstieg in die Firma konnte er bereits einiges an Erfahrung sammeln. Von Anfang an war es Maximilians Aufgabe die Kunden über deren Zurfriedenheit zu befragen und
+                  somit auch weitere Verbesserungen an unserem Produkt vorzunehmen.</p>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
