--- a/Kontakt.html
+++ b/Kontakt.html
@@ -52,12 +52,48 @@
       <!--Hier beginnt der Mainteil der Website-->
 
       <div id="main">
-        <h1>Das ist eine leere Seite, die mit Leben gefüllt werden will</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="contact">
+          <h1>Kontakt</h1>
+          <h2>So können Sie uns erreichen</h2>
+          <hr>
+          <p>Egal ober telefonisch, direkt vor Ort oder per Mail. Wir sind immer für Sie da. Außerhalb unserer Öffnungszeiten, werden Ihre Telefonate an unsere Supporthotline weitergeleitet, welche Ihnen Fragen rund um Ihren Elektroantrieb
+            beantworten</p>
+
+          <tbody>
+            <tr>
+              <td>E-Mail Adresse</td>
+              <td>elektro@bikes.de</td>
+            </tr><br>
+            <tr>
+              <td>Telefonnummer</td>
+              <td>0800/9941000</td>
+            </tr><br>
+            <tr>
+              <td>Adresse:</td>
+              <td>Elekto Bikes GmbH</td>
+            </tr><br>
+            <tr>
+              <td></td>
+              <td>Marienstraße 20</td>
+            </tr><br>
+            <tr>
+              <td></td>
+              <td>89518 Heidenheim</td>
+            </tr><br>
+          </tbody>
+
+
+          <h2>Anfahrt</h2>
+          <hr>
+          <p>So kommen Sie zu uns</p>
+          <div class="mapouter">
+            <div class="gmap_canvas">
+              <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Marienstra%C3%9Fe%2020,%2089518%20Heidenheim&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+              <a href="https://add-google-map.com"></a>
+            </div>
+          </div>
+        </div>
       </div>
-
-
     </main>
     <!--Hier endet der Main Bereich-->
 
